Add new lib values to tsconfig.json
https://github.com/microsoft/TypeScript/pull/56723

--- a/src/schemas/json/tsconfig.json
+++ b/src/schemas/json/tsconfig.json
@@ -955,8 +955,10 @@
                       "ESNext.Symbol",
                       "DOM",
                       "DOM.Iterable",
+                      "DOM.AsyncIterable",
                       "ScriptHost",
                       "WebWorker",
+                      "WebWorker.AsyncIterable",
                       "WebWorker.ImportScripts",
                       "Webworker.Iterable",
                       "ES7",
